@@ -185,8 +185,6 @@ class FC3_Network(KickstartCommand):
         KickstartCommand.__init__(self, writePriority)
         self.op = self._getParser()
 
-        self._setClassData()
-
         if network == None:
             network = []
 
@@ -202,9 +200,6 @@ class FC3_Network(KickstartCommand):
             return "# Network information\n" + retval
         else:
             return ""
-
-    def _setClassData(self):
-        self.dataType = FC3_NetworkData
 
     def _getParser(self):
         op = KSOptionParser(lineno=self.lineno)
@@ -231,7 +226,7 @@ class FC3_Network(KickstartCommand):
 
     def parse(self, args):
         (opts, extra) = self.op.parse_args(args=args)
-        nd = self.dataType()
+        nd = self.handler.NetworkData()
         self._setToObj(self.op, opts, nd)
         self.add(nd)
 
@@ -242,9 +237,6 @@ class FC4_Network(FC3_Network):
     def __init__(self, writePriority=0, network=None):
         FC3_Network.__init__(self, writePriority, network)
 
-    def _setClassData(self):
-        self.dataType = FC4_NetworkData
-
     def _getParser(self):
         op = FC3_Network._getParser(self)
         op.add_option("--notksdevice", dest="notksdevice", action="store_true",
@@ -254,9 +246,6 @@ class FC4_Network(FC3_Network):
 class FC6_Network(FC4_Network):
     def __init__(self, writePriority=0, network=None):
         FC4_Network.__init__(self, writePriority, network)
-
-    def _setClassData(self):
-        self.dataType = FC6_NetworkData
 
     def _getParser(self):
         op = FC4_Network._getParser(self)
@@ -270,9 +259,6 @@ class F8_Network(FC6_Network):
     def __init__(self, writePriority=0, network=None):
         FC6_Network.__init__(self, writePriority, network)
 
-    def _setClassData(self):
-        self.dataType = F8_NetworkData
-
     def _getParser(self):
         op = FC6_Network._getParser(self)
         op.add_option("--ipv6", dest="ipv6")
@@ -281,9 +267,6 @@ class F8_Network(FC6_Network):
 class RHEL4_Network(FC3_Network):
     def __init__(self, writePriority=0, network=None):
         FC3_Network.__init__(self, writePriority, network)
-
-    def _setClassData(self):
-        self.dataType = RHEL4_NetworkData
 
     def _getParser(self):
         op = FC3_Network._getParser(self)
