@@ -53,8 +53,6 @@ class FC3_VolGroup(KickstartCommand):
         KickstartCommand.__init__(self, writePriority)
         self.op = self._getParser()
 
-        self._setDataClass()
-
         if vgList == None:
             vgList = []
 
@@ -66,9 +64,6 @@ class FC3_VolGroup(KickstartCommand):
             retval += vg.__str__()
 
         return retval
-
-    def _setDataClass(self):
-        self.dataType = FC3_VolGroupData
 
     def _getParser(self):
         # Have to be a little more complicated to set two values.
@@ -87,7 +82,7 @@ class FC3_VolGroup(KickstartCommand):
 
     def parse(self, args):
         (opts, extra) = self.op.parse_args(args=args)
-        vg = self.dataType()
+        vg = self.handler.VolGroup()
         self._setToObj(self.op, opts, vg)
         vg.vgname = extra[0]
         vg.physvols = extra[1:]
